# expected-runs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: doc.yml
EXAMPLES/: run_code.py
JupyterNotebook/: conf_teams.ipynb  example_script.ipynb
docs/source/: code_documentation.rst  conf.py  index.rst
expected_runs/: Helpers.py  conf_teams.ipynb  conference_teams.py  core.py  generate_gamestate_summary.py  target_and_calculated_pipeline.py
python_files/: Helpers.py  conference_team_shap_analysis.py  ff_data_set_creation.py  gamestate_summary.ipynb  generate_gamestate_summary.py  generate_summary.ipynb  random_forest_modeling.py  shap_scaling_analysis.py  target_and_calculated_pipeline.py
tests/: test_core.py
